crates/rome_cli/tests/snapshots/main_commands_format/ignore_vcs_ignored_file.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `.git`

```git

```

## `.gitignore`

```gitignore

file2.js

```

## `file1.js`

```js
array.map((sentence) => sentence.split(" ")).flat();

```

## `file2.js`

```js
foo.call();


	bar.call();
```

## `rome.json`

```json
{
        "vcs": {
            "enabled": true,
            "clientKind": "git",
            "useIgnoreFile": true
        }
    }
```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```


